<resources>
    <string name="login">Sign In</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile">Please enter mobile no</string>
    <string name="enter_valid_mobile">mobile no should contain 10 character</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_password">Password should be at least 5 characters long</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_valid_name">Name should be at least 5 characters long</string>
    <string name="loading">Loading</string>
    <string name="google_id">google_id</string>
    <string name="splash_activity">Splash Activity</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_matches">confirm password should match with new password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="please_enter_date_of_birth">please enter date of Birth</string>
    <string name="enter_postal_code">please enter posatal code</string>
    <string name="enter_natonal_id">please enter national Id</string>
    <string name="response">response</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="enter_amount">please enter amount you want to transfer</string>
</resources>
