<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.kujacustomerapp.ui.account.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineBegin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_16sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_16sdp" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSignUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#00a79d"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_26sdp"
                style="@style/MyTextViewHeader1"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                tools:text="Sign Up"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSignUpDescription"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#9d9d9d"
                android:lineSpacingExtra="4sp"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintStart_toStartOf="@+id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUpLabel"
                tools:text="Sign up to join"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                android:focusable="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/date_of_birth"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:paddingStart="@dimen/space_0dp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:drawableEnd="@drawable/icon_date_range"
                    android:textColorHint="@color/colorHintText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilDateOfBirth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilPhoneNo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPostalCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNationalId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilPostalCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNationalId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilNationalId">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/MyBlueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:visibility="@{viewModel.showProgress?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>