<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools2="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/apk/res/android"
    tools2:ignore="NamespaceTypo">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.kujacustomerapp.ui.account.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineBegin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_16sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_16sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLoginLabel"
                style="@style/MyTextViewHeader1"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_26sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_24ssp"
                tools:text="Sign In"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSignInToContinue"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                app:layout_constraintStart_toStartOf="@+id/guideLineBegin"
                app:layout_constraintEnd_toEndOf="@+id/guideLineEnd"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="#9d9d9d"
                android:lineSpacingExtra="4sp"
                android:layout_marginTop="@dimen/_3sdp"
                tools:text="Sign in to continue"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_120sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorText="@{viewModel.emailError}"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tvSignInToContinue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Phone Number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:afterTextChanged="@{(edible)->viewModel.phoneValidator(edible)}"
                    android:text="@={viewModel.mobile}"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColorHint="@color/colorHintText"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorText="@{viewModel.passwordError}"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText"
                app:hintTextColor="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin"
                app:layout_constraintTop_toBottomOf="@id/tilPhone"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorHintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:afterTextChanged="@{(edible)->viewModel.passwordValidator(edible)}"
                    android:text="@={viewModel.password}"
                    android:textColorHint="@color/colorHintText"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvForgotPassword"
                style="@style/MyTextViewBlueBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/MyBlueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textAlignment="center"
                android:onClick="@{() -> viewModel.onLoginClicked()}"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineBegin" />

            <com.google.android.material.textview.MaterialTextView
                android:fontFamily="@font/montserrat_regular"
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="#9d9d9d"
                tools:text="Don’t have an account? Sign Up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_31sdp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:visibility="@{viewModel.showProgress?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressBar"
                    android:indeterminateTint="@color/colorPrimary"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>